--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.1",
     "redux": "^5.0.0",
+    "redux-logger": "^3.0.6",
     "tailwind-merge": "^2.0.0",
     "zustand": "^4.4.7"
   },
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-logger": "^3.0.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
